# holesail

./: .gitignore  .npmignore  CHANGELOG.txt  CMakeLists.txt  NOTICE  README.md  builtins.json  ex.mjs  example.mjs  holesail.js  holesail.mjs  index.js  manager.js  package-lock.json  package.json  test.mjs
.github/: build.yml
.github/workflows/: build.yml  prebuild.yml
Frontend/: docusaurus.config.js  package-lock.json  package.json  tailwind.config.js
Frontend/src/css/: custom.css
Frontend/src/pages/: index.js
includes/: client.js  help.js  livefiles.js  logo.js  manager.js  server.js  stdout.js  validateInput.js
lib/: ProcessManager.js  help.js  stdout.js  testjs.js  validateInput.js
src/: builtins.json  example.mjs  index.js  main.c
src/lib/: help.js  stdout.js  validateInput.js
